fixed gap at top of header | final commit

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,6 +35,7 @@ body {
 header {
     background: #fff;
     border-bottom: #cccccc 2px solid;
+    margin-bottom: 25px;
 }
 
 header .container {
@@ -86,7 +87,7 @@ header:before {
     max-width: 960px;
     background: #ffffff;
     border: 2px solid #dddddd;
-    margin: 25px auto;
+    margin: 0 auto 25px;
 }
 
 .container h2 {
